# HyzeIPUChip

./: CMakeLists.txt  HyzeThreatScanner.cs  Hyze_IPU_Training.ipynb  JLCPCB Order Guide.txt  Pin Mapping.txt  README.md  bom.csv  cargo.toml  hyze_confidential_enclave.rs  hyze_context_streamer.rs  hyze_diffusion_ipu.rs  hyze_gguf_ipu.cpp  hyze_ipu_antivirus.rs  hyze_ipu_asm_forward.S  hyze_ipu_carrier.kicad_pcb  hyze_ipu_dataflow_pipeline.sv  hyze_ipu_pcie_driver.cpp  hyze_ipu_pipeline.sv  hyze_ipu_prompt_filter.sv  hyze_ipu_truth_engine.sv  hyze_jni_bridge.cpp  hyze_js_frameworks.js  hyze_megachip_orchestrator.rs  hyze_multimodal_runtime.rs  hyze_prompt_guard.rs  hyze_pytorch_ipu.py  hyze_quantum_crypto.rs  hyze_secure_dp_controller.java  hyze_secure_inference.bat  hyze_serverless_edge.wasm  hyze_task_manager.rs  hyze_threat_scanner.cpp  hyze_threat_scanner.rs  hyze_virus_remover.rs  hyze_wasi_secure_runtime.wasm  ipu_test.rs  test_dma.sv
src/: driver.rs  main.rs  onnx_compiler.rs  sram_controller.rs  worker.rs
